
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ssl_io_t {int fd; int raw; int * ssl; } ;
typedef int SSL_CTX ;
typedef int SSL ;
typedef int BIO ;


 int BIO_NOCLOSE ;
 int * BIO_new_socket (int,int ) ;
 int * SSL_new (int *) ;
 int SSL_set_bio (int *,int *,int *) ;
 int SSL_set_connect_state (int *) ;
 int fail (char*) ;

void
setup_ssl_io
    (struct ssl_io_t *io, SSL_CTX *ctx, int sock, int raw)
{
  SSL *ssl;
  BIO *bio;

  ssl = SSL_new(ctx);
  if (!ssl)
    fail("setup_ssl_ctx:SSL_new");
  bio = BIO_new_socket(sock, BIO_NOCLOSE);
  if (!bio)
    fail("setup_ssl_ctx:BIO_new_socket");
  SSL_set_bio(ssl, bio, bio);
  SSL_set_connect_state(ssl);
  io->ssl = ssl;
  io->fd = sock;
  io->raw = raw;
}
